--- a/css/scss/blocks/lakes.scss
+++ b/css/scss/blocks/lakes.scss
@@ -11,9 +11,9 @@
     padding-top: 100px;
   }
 
-  @media (max-width: 1280px) {
-    padding: 0 15px;
-  }
+  // @media (max-width: 1280px) {
+  //   padding: 0 15px;
+  // }
 
   @media (max-width: 750px) {
     &__slider {
