--- a/css/scss/blocks/services.scss
+++ b/css/scss/blocks/services.scss
@@ -49,11 +49,11 @@
   }
 }
 
-@media (max-width: 1280px) {
-  .services {
-    padding: 0 15px;
-  }
-}
+// @media (max-width: 1280px) {
+//   .services {
+//     padding: 0 15px;
+//   }
+// }
 
 @media (min-width: 1280px) {
   .services {
