--- a/css/scss/blocks/rent.scss
+++ b/css/scss/blocks/rent.scss
@@ -69,7 +69,7 @@
 
 @media (max-width: 1280px) {
   .rent {
-    padding: 0 15px 100px;
+    // padding: 0 15px 100px;
 
     &__title {
       margin: 0 auto;
