--- a/css/scss/blocks/gift.scss
+++ b/css/scss/blocks/gift.scss
@@ -7,8 +7,10 @@
   }
 }
 
-// @media (max-width: 1280px) {
-//   .gift {
-//     padding: 0 15px;
-//   }
-// }
+@media (max-width: 1280px) {
+  .gift {
+    &__container-grid {
+      row-gap: 40px;
+    }
+  }
+}
