--- a/css/scss/blocks/services.scss
+++ b/css/scss/blocks/services.scss
@@ -47,6 +47,14 @@
     width: 100%;
     max-width: 1280px;
   }
+
+  @media (max-width: 420px) {
+    .services {
+      &__slide {
+        min-height: 645px;
+      }
+    }
+  }
 }
 
 // @media (max-width: 1280px) {
