--- a/css/scss/blocks/footer.scss
+++ b/css/scss/blocks/footer.scss
@@ -26,6 +26,10 @@
     justify-content: space-between;
   }
 
+  &__column {
+    max-width: 620px;
+  }
+
   @media (max-width: 950px) {
     .footer {
       &__row {
