--- a/css/main.css
+++ b/css/main.css
@@ -319,6 +319,9 @@
 .weather__widget-mobile {
   display: none;
 }
+.weather__widget {
+  width: 100%;
+}
 @media (max-width: 950px) {
   .weather {
     padding-bottom: 100px;
@@ -327,9 +330,6 @@
     display: block;
     max-width: 620px;
     margin: 0 auto;
-  }
-  .weather__widget {
-    display: none;
   }
   .weather__container {
     padding-top: 50px;
