--- a/css/scss/blocks/weather.scss
+++ b/css/scss/blocks/weather.scss
@@ -5,6 +5,10 @@
     display: none;
   }
 
+  &__widget {
+    width: 100%;
+  }
+
   @media (max-width: 950px) {
     padding-bottom: 100px;
 
@@ -15,7 +19,7 @@
     }
 
     &__widget {
-      display: none;
+      // display: none;
     }
 
     &__container {
