--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -11,6 +11,7 @@
   backdrop-filter: blur(10px);
   padding: 12px 32px;
   z-index: 100;
+  transition: all 0.5s ease-out;
 
   &__controls {
     display: flex;
