--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -193,6 +193,10 @@
     font-size: 25px;
   }
 
+  .text {
+    font-size: 18px;
+  }
+
   .title-block {
     @include title($black, $font-rail);
     padding-top: 0px;
