--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,7 @@
   padding: 12px 32px;
   z-index: 100;
   transition: all 0.5s ease-out;
+  position: relative;
 }
 .header__controls {
   display: flex;
@@ -242,6 +243,48 @@
   display: flex;
   column-gap: 16px;
 }
+@media (max-width: 950px) {
+  .header {
+    width: calc(100% - 10px);
+    top: 0px;
+    flex-direction: column;
+  }
+  .header__state_active {
+    width: 100%;
+    border-radius: 0px;
+    background: #03463d;
+    height: 100vh;
+    align-items: center;
+  }
+  .header__controls {
+    padding-top: 146px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 100px;
+  }
+  .header__nav {
+    display: flex;
+    margin-right: 0px;
+    column-gap: 62px;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 50px;
+  }
+  .header__lang {
+    display: flex;
+    column-gap: 31px;
+    justify-content: center;
+  }
+  .header__logo {
+    width: 103px;
+  }
+  .header__burger {
+    position: absolute;
+    right: 195px;
+    top: 5px;
+  }
+}
 
 .lang__link {
   color: #fff;
@@ -255,6 +298,12 @@
   font-size: 20px;
   font-weight: 700;
 }
+@media (max-width: 950px) {
+  .navigation__link {
+    font-size: 35px;
+  }
+}
+
 .hero {
   background: no-repeat url("../images/images/hero_image.jpg");
   background-size: cover;
@@ -743,6 +792,118 @@
   .instagram__header {
     padding-bottom: 32px;
   }
+}
+
+.menuToggle {
+  display: none;
+  position: relative;
+  top: 18px;
+  left: 163px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+.menuToggle__input {
+  display: none;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  /* hide this */
+  z-index: 2;
+  /* and place it over the hamburger */
+  -webkit-touch-callout: none;
+}
+@media (max-width: 950px) {
+  .menuToggle {
+    display: block;
+  }
+  .menuToggle__input {
+    display: block;
+  }
+}
+
+/*
+ * Just a quick hamburger
+ */
+.menuToggle span {
+  display: block;
+  width: 33px;
+  height: 2px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #fff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+.menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+.menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+.menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(40deg) translate(-8px, -14px);
+  background: #fff;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+.menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+.menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-40deg) translate(-3px, 9px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu {
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menu li {
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+.menuToggle input:checked ~ ul {
+  transform: none;
 }
 
 .none {
