--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -12,6 +12,7 @@
   padding: 12px 32px;
   z-index: 100;
   transition: all 0.5s ease-out;
+  position: relative;
 
   &__controls {
     display: flex;
@@ -27,5 +28,52 @@
   &__lang {
     display: flex;
     column-gap: 16px;
+  }
+
+  @media (max-width: 950px) {
+    width: calc(100% - 10px);
+    top: 0px;
+    flex-direction: column;
+
+    &__state_active {
+      width: 100%;
+      border-radius: 0px;
+      background: $green;
+      height: 100vh;
+      align-items: center;
+    }
+
+    &__controls {
+      padding-top: 146px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      row-gap: 100px;
+    }
+
+    &__nav {
+      display: flex;
+      margin-right: 0px;
+      column-gap: 62px;
+      flex-direction: column;
+      align-items: flex-start;
+      row-gap: 50px;
+    }
+
+    &__lang {
+      display: flex;
+      column-gap: 31px;
+      justify-content: center;
+    }
+
+    &__logo {
+      width: 103px;
+    }
+
+    &__burger {
+      position: absolute;
+      right: 195px;
+      top: 5px;
+    }
   }
 }
