--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -173,6 +173,7 @@
 @import "./blocks/social";
 @import "./blocks/footer";
 @import "./blocks/instagram";
+@import "./blocks/menuToggle";
 
 .none {
   display: none;
