--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   position: fixed;
   display: flex;
-  top: 30px;
+  top: 25px;
   right: 0;
   left: 0;
   justify-content: space-between;
@@ -12,7 +12,14 @@
   padding: 12px 32px;
   z-index: 100;
   transition: all 0.5s ease-out;
-  position: relative;
+
+  &__state_dark {
+    background-color: rgba(54, 53, 53, 0.418);
+  }
+
+  &__state_hidden {
+    top: -80px;
+  }
 
   &__controls {
     display: flex;
@@ -32,7 +39,7 @@
 
   @media (max-width: 950px) {
     width: calc(100% - 10px);
-    top: 0px;
+    top: 25px;
     flex-direction: column;
 
     &__state_active {
@@ -41,6 +48,7 @@
       background: $green;
       height: 100vh;
       align-items: center;
+      top: 0px;
     }
 
     &__controls {
@@ -49,6 +57,10 @@
       flex-direction: column;
       align-items: center;
       row-gap: 100px;
+    }
+
+    &__controls_hidden {
+      display: none;
     }
 
     &__nav {
@@ -74,6 +86,14 @@
       position: absolute;
       right: 195px;
       top: 5px;
+    }
+
+    &__burger_active {
+      top: 10px;
+    }
+
+    &__state_hidden {
+      top: -80px;
     }
   }
 }
