set hero title padding

--- a/css/scss/blocks/hero.scss
+++ b/css/scss/blocks/hero.scss
@@ -8,7 +8,7 @@
 
   &__title {
     @include text-mixin($white, $font-unboun, 80px, 800);
-    padding-top: 300px;
+    padding-top: 20%;
     line-height: 99px;
     max-width: 612px;
   }
