add contact icons

--- a/css/main.css
+++ b/css/main.css
@@ -330,7 +330,7 @@
   font-family: "Unbounded", cursive;
   font-size: 80px;
   font-weight: 800;
-  padding-top: 300px;
+  padding-top: 20%;
   line-height: 99px;
   max-width: 612px;
 }
@@ -395,13 +395,47 @@
   }
 }
 
-.subscribe {
-  width: 400px;
-  height: 80px;
+.connect {
   position: fixed;
   z-index: 100;
+  display: flex;
+  column-gap: 20px;
 }
-.subscribe__btn {
+.connect__links {
+  display: flex;
+  column-gap: 20px;
+}
+.connect__link {
+  width: 48px;
+  height: 48px;
+  background-color: #fff;
+  box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+}
+.connect__link:hover .connect__stroke {
+  stroke: #fff;
+}
+.connect__link:hover .connect__fill {
+  fill: #fff;
+}
+.connect__telegram:hover {
+  background: linear-gradient(180deg, #41bce7 0%, #22a6dc 99.64%);
+}
+.connect__whatsapp:hover {
+  background: #25d366;
+}
+.connect__insta:hover {
+  background: linear-gradient(45deg, #ffd521 14.64%, #ffd020 18.54%, #fec01e 23.42%, #fca71b 28.82%, #fa8316 34.59%, #f85510 40.67%, #f51e09 46.91%, #f30005 50%, #f20007 50.25%, #e1003b 56.83%, #d30067 63.29%, #c70088 69.49%, #bf00a0 75.38%, #bb00af 80.81%, #b900b4 85.36%);
+}
+.connect__facebook:hover {
+  background: #1877f2;
+}
+.connect__phone:hover {
+  background: #25d366;
+}
+.connect__btn {
   width: 400px;
   padding: 12px 24px;
   background-color: #ffffff;
