--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@
     display: inline-block;
     min-height: 250px;
     min-width: 400px;
-    margin-right: 40px;
+    margin-right: 36px;
     margin-bottom: 25px;
   }
   @media screen and (max-width: 500px) {
@@ -226,7 +226,7 @@
   border-radius: 20px;
   backdrop-filter: blur(10px);
   padding: 12px 32px;
-  z-index: 100;
+  z-index: 9999;
   transition: all 0.5s ease-out;
 }
 .header__state_dark {
@@ -400,10 +400,20 @@
   z-index: 100;
   display: flex;
   column-gap: 20px;
+  row-gap: 40px;
 }
 .connect__links {
+  opacity: 1;
   display: flex;
   column-gap: 20px;
+  margin-left: 0px;
+  transition: all 0.5s ease-out;
+  z-index: 80;
+}
+.connect__links_hidden {
+  opacity: 0;
+  margin-left: -225px;
+  transition: all 0.5s ease-out;
 }
 .connect__link {
   width: 48px;
@@ -413,6 +423,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: center;
+  transition: all 0.5s ease-out;
 }
 .connect__link:hover .connect__stroke {
   stroke: #fff;
@@ -441,10 +452,17 @@
   background-color: #ffffff;
   box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  z-index: 100;
   color: #393939;
   font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-weight: 700;
+}
+@media (max-width: 950px) {
+  .connect {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
 }
 
 .rent {
