--- a/css/scss/blocks/subscribe.scss
+++ b/css/scss/blocks/subscribe.scss
@@ -4,9 +4,21 @@
   display: flex;
   column-gap: 20px;
 
+  row-gap: 40px;
+
   &__links {
+    opacity: 1;
     display: flex;
     column-gap: 20px;
+    margin-left: 0px;
+    transition: all 0.5s ease-out;
+    z-index: 80;
+  }
+
+  &__links_hidden {
+    opacity: 0;
+    margin-left: -225px;
+    transition: all 0.5s ease-out;
   }
 
   &__link {
@@ -17,6 +29,7 @@
     border-radius: 10px;
     display: flex;
     justify-content: center;
+    transition: all 0.5s ease-out;
   }
 
   &__link:hover &__stroke {
@@ -69,7 +82,13 @@
     background-color: #ffffff;
     box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
+    z-index: 100;
 
     @include text-mixin($black, $font-rail, 20px, 700);
+  }
+
+  @media (max-width: 950px) {
+    flex-direction: column-reverse;
+    align-items: center;
   }
 }
