--- a/css/scss/blocks/subscribe.scss
+++ b/css/scss/blocks/subscribe.scss
@@ -77,7 +77,7 @@
   }
 
   &__btn {
-    width: 400px;
+    // width: 400px;
     padding: 12px 24px;
     background-color: #ffffff;
     box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.15);
