--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -49,6 +49,7 @@
       height: 100vh;
       align-items: center;
       top: 0px;
+      transition: all 0.5s ease-out;
     }
 
     &__controls {
