--- a/css/scss/blocks/form.scss
+++ b/css/scss/blocks/form.scss
@@ -4,6 +4,7 @@
   &__fieldset {
     padding-bottom: 32px;
   }
+
   &__row {
     display: flex;
     justify-content: space-between;
@@ -36,4 +37,54 @@
     border-radius: 10px;
     @include text-mixin($white, $font-rail, 20px, 700);
   }
+
+  // &__submit:hover {
+  //   background: #598680;
+  // }
 }
+
+/* Radial Out */
+// .form__hvr-radial-out {
+//   display: inline-block;
+//   vertical-align: middle;
+//   -webkit-transform: perspective(1px) translateZ(0);
+//   transform: perspective(1px) translateZ(0);
+//   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+//   position: relative;
+//   overflow: hidden;
+//   background: #e1e1e1;
+//   -webkit-transition-property: color;
+//   transition-property: color;
+//   -webkit-transition-duration: 0.3s;
+//   transition-duration: 0.3s;
+// }
+// .form__hvr-radial-out:before {
+//   content: "";
+//   position: absolute;
+//   z-index: -1;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background: #598680;
+//   border-radius: 100%;
+//   -webkit-transform: scale(0);
+//   transform: scale(0);
+//   -webkit-transition-property: transform;
+//   transition-property: transform;
+//   -webkit-transition-duration: 0.3s;
+//   transition-duration: 0.3s;
+//   -webkit-transition-timing-function: ease-out;
+//   transition-timing-function: ease-out;
+// }
+// .form__hvr-radial-out:hover,
+// .form__hvr-radial-out:focus,
+// .form__hvr-radial-out:active {
+//   color: white;
+// }
+// .form__hvr-radial-out:hover:before,
+// .form__hvr-radial-out:focus:before,
+// .form__hvr-radial-out:active:before {
+//   -webkit-transform: scale(2);
+//   transform: scale(2);
+// }
