--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
+html {
+  scroll-behavior: smooth;
+}
+
 .body {
   background-color: #faffee;
 }
