--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -3,6 +3,10 @@
 @import "./utils/mixin";
 @import "https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css";
 
+html {
+  scroll-behavior: smooth;
+}
+
 .body {
   background-color: $background;
 }
