--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -50,10 +50,11 @@
       align-items: center;
       top: 0px;
       transition: all 0.5s ease-out;
+      overflow-y: scroll;
     }
 
     &__controls {
-      padding-top: 146px;
+      padding-top: 90px;
       display: flex;
       flex-direction: column;
       align-items: center;
