--- a/css/scss/blocks/lang.scss
+++ b/css/scss/blocks/lang.scss
@@ -4,6 +4,13 @@
   &__link {
     @include text-mixin($white, $font-rail, 20px, 700);
   }
+  &__link:hover {
+    color: #cfcfcf;
+  }
+
   &__link--active {
+  }
+  &__link--active:hover {
+    color: $white;
   }
 }
