--- a/css/scss/blocks/hero.scss
+++ b/css/scss/blocks/hero.scss
@@ -20,13 +20,7 @@
     padding-top: 50px;
   }
 
-  // @media (max-width: 1280px) {
-  //   padding: 0 15px;
-  // }
-
   @media (max-width: 750px) {
-    // background-position: -733px 0px;
-
     &__title {
       @include text-mixin($white, $font-unboun, 45px, 800);
       line-height: 56px;
@@ -36,6 +30,14 @@
     &__subtitle {
       font-size: 20px;
       line-height: 23px;
+    }
+  }
+
+  @media (min-width: 750px) and (min-height: 650px) and (max-height: 800px) {
+    &__title {
+      @include text-mixin($white, $font-unboun, 45px, 800);
+      line-height: 56px;
+      padding-top: 200px;
     }
   }
 }
