--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -37,6 +37,10 @@
     column-gap: 16px;
   }
 
+  &__logo {
+    width: 103px;
+  }
+
   @media (max-width: 950px) {
     width: calc(100% - 10px);
     top: 25px;
