--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   border-radius: 20px;
   backdrop-filter: blur(10px);
+  background-color: #ffffff2b;
   padding: 12px 32px;
   z-index: 9999;
   transition: all 0.5s ease-out;
