--- a/css/scss/blocks/rent.scss
+++ b/css/scss/blocks/rent.scss
@@ -28,7 +28,7 @@
   }
 
   &__title {
-    @include title($white, $font-rail);
+    @include title($white, $font-unboun);
     padding-bottom: 100px;
   }
   &__subtitle {
