--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -177,12 +177,12 @@ html {
 @import "./blocks/form";
 @import "./blocks/gift-card";
 @import "./blocks/services";
-@import "./blocks/lakes";
 @import "./blocks/contacts";
 @import "./blocks/social";
 @import "./blocks/footer";
 @import "./blocks/instagram";
 @import "./blocks/menuToggle";
+@import "./blocks/tours";
 
 .none {
   display: none;
